# oracle-integration-copilot

./: .env.example  .gitignore  CLAUDE.md  DEMO_SCRIPT.md  README.md  REQUIREMENTS.md  app.py  pyproject.toml  requirements.txt  user_stories.csv
copilot/: __main__.py  config.py  designer.py  ingest.py  parser.py  retriever.py  schemas.py
copilot/prompts/: critic.txt  designer.txt  parser.txt
copilot/renderers/: markdown.py
data/examples/: coupa_to_erp.md  salesforce_to_erp.md  workday_to_hcm.md
data/index/: index.faiss  index.pkl  source_hash.txt
data/oracle_docs/: erp_rest_invoices.md  erp_rest_suppliers.md  hcm_rest_workers.md  oci_auth_oauth.md  oic_connections.md  oic_fault_handling.md  oic_idempotency.md  oic_orchestration.md  oic_patterns.md  oic_transformations.md  scm_rest_items.md
docs/: architecture.md
tests/: test_parser.py  test_retriever.py  test_schemas.py
